--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <nav class="navbar">
-        <div class="logo">Khushboo</div>
+        <div class="logo">My Portfolio</div>
         <div class="menu-toggle" id="menu-toggle">&#9776;</div>
         <ul class="nav-links" id="nav-links">
           <li><a href="#about">About</a></li>
