--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Hi, I'm Khushboo</h1>
-      <p>Web Developer | Graphic Designer | BCA Student</p>
+      <p> Learner Web Developer | Graphic Designer | BCA Student</p>
       <p>From Yamunanagar, passionate about building beautiful and functional websites.</p>
     </div>
     <div class="hero-img">
