--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="hero">
     <div class="hero-text">
       <h1>Hi, I'm Khushboo</h1>
-      <p> Learner Web Developer | Graphic Designer | BCA Student</p>
+      <p> Learner Web Developer| BCA Student</p>
       <p>From Yamunanagar, passionate about building beautiful and functional websites.</p>
     </div>
     <div class="hero-img">
@@ -47,13 +47,12 @@
   <section id="skills">
     <h2>Tech Skills</h2>
     <ul class="skills-list">
-      <li>C</li>
-      <li>C++</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Bootstrap</li>
-      <li>Graphic Design</li>
+     <li>C/C++ Programming(Basic)</li>
+      <li>HTML/CSS/JavaScript/Bootstrap</li>
+      <li>MERN-React,Node.js,Express,MongoDB</li>
+      <li>Time Management</li>
+      <li>Punctuality</li>
+      <li>Hardworking</li>
     </ul>
   </section>
 
@@ -62,6 +61,9 @@
     <div class="project">
       <h3>Online Shopping Website (Watches)</h3>
       <p>Built a frontend shopping website for watches using HTML, CSS, and JavaScript. Includes login and contact pages. (No backend yet)</p>
+       <br>
+      <h3>Employee Management System (Full Stack)</h3>
+      <p>A CRUD-based Employee Management System built with React, Express.js, and MongoDB Shell.Enabled users to add, delete, update, find, and list employees, ensuring efficient data management and clean UI.</p>
     </div>
   </section>
 
@@ -105,3 +107,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
